--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-              "node_modules/datatables.net-dt/css/dataTables.dataTables.css"
+              "node_modules/datatables.net-dt/css/dataTables.dataTables.css",
+              "src/assets/css/toastify.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
